MODRS-170: refactor tests